Add portfolio website with 3D effects, animations, and modern UI components

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Manager - Organize Your Day Efficiently</title>
-    <meta name="description" content="Modern task management app to help you plan, organize, and prioritize your daily activities efficiently. Track your progress and stay productive." />
-    <meta name="author" content="Lovable" />
+    <title>Developer Portfolio - Software Developer & Automation Engineer</title>
+    <meta name="description" content="Professional developer portfolio showcasing automation projects, web development, and technical expertise. Specialized in Appium, Java, TestNG, React, and TypeScript." />
+    <meta name="author" content="Your Name" />
+    <meta name="keywords" content="software developer, automation engineer, Appium, Selenium, TestNG, Java, React, TypeScript, web development, portfolio" />
 
-    <meta property="og:title" content="Task Manager - Organize Your Day Efficiently" />
-    <meta property="og:description" content="Modern task management app to help you plan, organize, and prioritize your daily activities efficiently." />
+    <meta property="og:title" content="Developer Portfolio - Software Developer & Automation Engineer" />
+    <meta property="og:description" content="Professional developer portfolio showcasing automation projects, web development, and technical expertise." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://yourportfolio.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Developer Portfolio - Software Developer & Automation Engineer" />
+    <meta name="twitter:description" content="Professional developer portfolio showcasing automation projects, web development, and technical expertise." />
   </head>
 
   <body>
