--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Developer Portfolio - Software Developer & Automation Engineer</title>
-    <meta name="description" content="Professional developer portfolio showcasing automation projects, web development, and technical expertise. Specialized in Appium, Java, TestNG, React, and TypeScript." />
-    <meta name="author" content="Your Name" />
-    <meta name="keywords" content="software developer, automation engineer, Appium, Selenium, TestNG, Java, React, TypeScript, web development, portfolio" />
+    <title>Developer Portfolio - Full Stack and DevOps Engineer</title>
+    <meta name="description" content="Professional developer portfolio showcasing full stack development, DevOps engineering, and technical expertise. Specialized in React, Node.js, AWS, Docker, and cloud-native solutions." />
+    <meta name="author" content="Austin Jayaraj.A" />
+    <meta name="keywords" content="full stack developer, DevOps engineer, React, Node.js, AWS, Docker, cloud computing, web development, portfolio" />
 
-    <meta property="og:title" content="Developer Portfolio - Software Developer & Automation Engineer" />
-    <meta property="og:description" content="Professional developer portfolio showcasing automation projects, web development, and technical expertise." />
+    <meta property="og:title" content="Developer Portfolio - Full Stack and DevOps Engineer" />
+    <meta property="og:description" content="Professional developer portfolio showcasing full stack development, DevOps engineering, and technical expertise." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://yourportfolio.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Developer Portfolio - Software Developer & Automation Engineer" />
+    <meta name="twitter:title" content="Developer Portfolio - Full Stack and DevOps Engineer" />
     <meta name="twitter:description" content="Professional developer portfolio showcasing automation projects, web development, and technical expertise." />
   </head>
 
